[gd_scene load_steps=5 format=3 uid="uid://dcwhoblddxd78"]

[ext_resource type="FontFile" uid="uid://b2ebbbqmn8vt2" path="res://Assets/fonts/fusion-pixel-10px-monospaced-zh_hans.otf" id="1_3hggx"]
[ext_resource type="Script" uid="uid://coot3pd6tspuq" path="res://Scenes/game_over/game_over.gd" id="1_hxn1k"]

[sub_resource type="LabelSettings" id="LabelSettings_hxn1k"]
font = ExtResource("1_3hggx")
font_size = 120
shadow_color = Color(0.929412, 0.917647, 0.909804, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_lrkoy"]
font = ExtResource("1_3hggx")
font_size = 50

[node name="GameOver" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxn1k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Blank2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "游戏结束"
label_settings = SubResource("LabelSettings_hxn1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blank" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "最高等级："
label_settings = SubResource("LabelSettings_lrkoy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blank4" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_lrkoy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blank3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_3hggx")
theme_override_font_sizes/font_size = 40
text = "重新开始"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_3hggx")
theme_override_font_sizes/font_size = 40
text = "返回主菜单"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
